--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-﻿streamlit
-langchain
-faiss-cpu
-PyMuPDF
-pandas
-unstructured
-sentence-transformers
-huggingface-hub
+streamlit
+azure-cognitiveservices-speech
+streamlit_audio_recorder
